Made Changes to koppelvlak G Added senity check + NoData is vallid now

--- a/src/Spookfiles.Testing.Common/Spookfiles.Testing.Common.csproj
+++ b/src/Spookfiles.Testing.Common/Spookfiles.Testing.Common.csproj
@@ -49,6 +49,9 @@
     <Compile Include="SubTests.cs" />
     <Compile Include="TestResult.cs" />
     <Compile Include="TestResultBase.cs" />
+    <Compile Include="WebClientEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
